--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1533,3 +1533,26 @@ footer {
     margin-right: 16px;
   }
 }
+
+#scrollToTopBtn {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  bottom: 40px;
+  right: 40px;
+  z-index: 1000;
+  background-color: #939878;
+  color: white;
+  border: none;
+  padding: 0;
+  border-radius: 50%;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  display: none;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  transition: opacity 0.3s ease;
+  opacity: 0.6;
+  text-align: center;
+}
+
